--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Node-Red-Fiap-CNPJ",
-    "description": "Utilizado API de Busca CNPj com node-red",
+    "description": "Utilizado API de Busca CNPJ com node-red",
     "version": "0.0.1",
     "dependencies": {},
     "node-red": {
